# todo

./: .coverage  .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  installation.md  mypy.ini  pyproject.toml  pytest.ini
src/application/contracts/db/account/: __init__.py  check_account_by_email_repository.py
src/domain/entities/: __init__.py  add_account.py
tests/application/contracts/db/account/: check_account_by_email_repository_test.py
tests/domain/: add_account_test.py
